--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -34,11 +34,13 @@
 </section>
 <section>
     <h3>効率的な学習でJavaScriptを自由自在に。</h3>
-    <section>
+    <div>
+        <img src="a.jpg">
+        <section>
             <h4>スライドで快適な学習を。<h4>
             <p>JS-Pro.は図を多用したスライド形式のインプット学習を行います。 イメージが掴みやすくなるので快適な学習体験を提供します。</p>
-        
-    </section>
+        </section>
+    </div>
 </section>
 
 </html>
