--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -39,6 +39,7 @@
         <section>
             <h4>スライドで快適な学習を。<h4>
             <p>JS-Pro.は図を多用したスライド形式のインプット学習を行います。 イメージが掴みやすくなるので快適な学習体験を提供します。</p>
+            <p>JS-Pro.は図を多用したスライド形式のインプット学習を行います。 イメージが掴みやすくなるので快適な学習体験を提供します。</p>
         </section>
     </div>
 </section>
