--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -36,8 +36,11 @@
     <h3>効率的な学習でJavaScriptを自由自在に。</h3>
 </sections>
 <section>
-    <h4>スライドで快適な学習を。<h4>
-    <p>JS-Pro.は図を多用したスライド形式のインプット学習を行います。 イメージが掴みやすくなるので快適な学習体験を提供します。</p>
+    <img src="a.jpg">
+    <div>
+        <h4>スライドで快適な学習を。<h4>
+        <p>JS-Pro.は図を多用したスライド形式のインプット学習を行います。 イメージが掴みやすくなるので快適な学習体験を提供します。</p>
+    </div>
 </section>
-
+</body>
 </html>
