--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -16,31 +16,32 @@
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script src="adobe_anime.js"></script>
 </head>
-<body>
-<section>
-    <h1>JS-Pro.</h1>
-    <p>Javascript特化型オンライン学習サイト</p>
-</section>
-<section>
-    <h2>JS-Pro's Concept</h2>
-</section>
-<section>
-    <h3>プログラミング言語を "使えるようになる"まで学習をサポートします。</h3>
-    <p>オンラインプログラミング学習サイトのほとんどは複数言語を用意しています。複数の言語の幅を広く学べるというメリットはあるものの、実用レベルまでスキルを磨くことは難しいです。本サービスでは、Javascriptという一つの言語に特化することで、プログラミング言語を"使える"までサポートします。
-    </p>
-</section>
-<section>
-    <h2>Features</h2>
-</section>
-<section>
-    <h3>効率的な学習でJavaScriptを自由自在に。</h3>
-</sections>
-<section>
-    <img src="a.jpg">
-    <div>
-        <h4>スライドで快適な学習を。<h4>
-        <p>JS-Pro.は図を多用したスライド形式のインプット学習を行います。 イメージが掴みやすくなるので快適な学習体験を提供します。</p>
-    </div>
-</section>
-</body>
+    <body>
+        <head></head>
+        <main>
+            <section>
+                <h1>JS-Pro.</h1>
+                <p>Javascript特化型オンライン学習サイト</p>
+            </section>
+            <section>
+                <h2>JS-Pro's Concept</h2>
+            </section>
+            <section>
+                <h3>プログラミング言語を "使えるようになる"まで学習をサポートします。</h3>
+                <p>オンラインプログラミング学習サイトのほとんどは複数言語を用意しています。複数の言語の幅を広く学べるというメリットはあるものの、実用レベルまでスキルを磨くことは難しいです。本サービスでは、Javascriptという一つの言語に特化することで、プログラミング言語を"使える"までサポートします。
+                </p>
+            </section>
+            <section>
+                <h2>Features</h2>
+            </section>
+            <section>
+                <h3>効率的な学習でJavaScriptを自由自在に。</h3>
+            </sections>
+            <section>
+                <h4>スライドで快適な学習を。<h4>
+                <p>JS-Pro.は図を多用したスライド形式のインプット学習を行います。 イメージが掴みやすくなるので快適な学習体験を提供します。</p>
+            </section>
+        </main>
+        <footer></footer>
+    </body>
 </html>
