--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -41,7 +41,7 @@
                 <p>aiueo</p>
             </sections>
             <section>
-                <h4>スライドで快適な学習を。<h4>
+                <h4>スライドで快適な学習を。</h4>
                 <p>aiueo</p>
             </section>
         </main>
