--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -41,8 +41,11 @@
                 <p>aiueo</p>
             </sections>
             <section>
-                <h4>スライドで快適な学習を。</h4>
-                <p>aiueo</p>
+                <img src="a.jpg">
+                <div>
+                    <h4>スライドで快適な学習を。</h4>
+                    <p>aiueo</p>
+                </div>
             </section>
         </main>
         <footer></footer>
