--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -47,6 +47,10 @@
                     <p>aiueo</p>
                 </div>
             </section>
+            <section>
+                <p>aaa</p>
+                <p>bbb</p>
+            </section>
         </main>
         <footer></footer>
     </body>
