--- a/adobe_anime.html
+++ b/adobe_anime.html
@@ -41,11 +41,13 @@
                 <p>aiueo</p>
             </sections>
             <section>
-                <img src="a.jpg">
-                <div>
-                    <h4>スライドで快適な学習を。</h4>
-                    <p>aiueo</p>
-                </div>
+                <section>
+                    <img src="a.jpg">
+                    <div>
+                        <h4>スライドで快適な学習を。</h4>
+                        <p>aiueo</p>
+                    </div>
+                </section>
             </section>
             <section>
                 <p>aaa</p>
